--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb-memory-server": "^8.10.1",
     "mongoose": "^6.7.5",
     "pino": "^8.7.0",
     "prom-client": "^14.1.0",
@@ -35,6 +37,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/node": "^18.11.9",
     "@types/response-time": "^2.3.5",
     "@types/supertest": "^2.0.12",
