--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pino": "^8.7.0",
     "prom-client": "^14.1.0",
     "response-time": "^2.3.2",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
