--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -36,6 +37,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
