--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.3",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.9",
     "@types/response-time": "^2.3.5",
     "@types/supertest": "^2.0.12",
